h264parse: Fix periodic SPS/PPS sending work after a seek

Reset the interval variable to have SPS/PPS sending work after
 a (backwards) seek.

https://bugzilla.gnome.org/show_bug.cgi?id=742212